Judge View Created

--- a/lecsofozo/Solution.DesktopApp/Solution.DesktopApp.csproj
+++ b/lecsofozo/Solution.DesktopApp/Solution.DesktopApp.csproj
@@ -122,6 +122,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\CreateOrEditJudgeView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\CreateOrEditTeamView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
